# Lenet5

./: .gitignore  CMakeLists.txt  FCLayer.cpp  FCLayer.h  README.md  activation.cpp  activation.h  activation_gpu.cu  activation_gpu.cuh  adam.cpp  adam.h  conv.cpp  conv.h  conv_gpu.cu  conv_gpu.cuh  cuda_utils.cu  cuda_utils.cuh  dataloader.cpp  dataloader.h  fc_gpu.cu  fc_gpu.cuh  lenet5.cpp  lenet5.h  main.cpp  model.cpp  model.h  out.cpp  out.h  output_gpu.cu  output_gpu.cuh  subsampling.cpp  subsampling.h  subsampling_gpu.cu  subsampling_gpu.cuh
baseline/: README.md
baseline/LeNet-from-Scratch-master/: LeNet5_train.ipynb
baseline/Tensor_baseline/: baseline.py
